--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/gokertanrisever/postcode-api#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/formidable": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.9.0",
@@ -38,7 +39,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "csv-parse": "^5.0.4",
     "express": "^4.17.2",
-    "helmet": "^5.0.2"
+    "express-validator": "^6.14.0",
+    "formidable": "^2.0.1",
+    "helmet": "^5.0.2",
+    "mongoose": "^6.2.1",
+    "winston": "^3.6.0"
   }
 }
