--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p .",
-    "start": "npm run build && nodemon index.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "nodemon --watch ../../packages --watch src --exec ts-node src/index.ts",
     "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts",
     "prod": "npm run build && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "lint": "eslint src/**/*.ts",
-    "lint-fix": "eslint --fix src/**/*.ts"
+    "lint-fix": "eslint --fix src/**/*.ts",
+    "test-build": "docker compose up -d && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -24,15 +25,20 @@
   },
   "homepage": "https://github.com/gokertanrisever/postcode-api#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.4",
+    "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "ts-node": "^10.5.0",
