--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -p .",
     "start": "npm run build && node dist/server.js",
-    "dev": "nodemon --watch ../../packages --watch src --exec ts-node src/index.ts",
+    "dev": "npm run build && nodemon index.js",
     "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts",
     "prod": "npm run build && npm run start",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
@@ -29,6 +29,8 @@
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.4",
     "@types/mocha": "^9.1.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "chai": "^4.3.6",
@@ -51,6 +53,8 @@
     "formidable": "^2.0.1",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "winston": "^3.6.0"
   }
 }
