package.json: unused scripts removed

--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "build": "tsc -p .",
     "start": "npm run build && node dist/server.js",
     "dev": "npm run build && nodemon index.js",
-    "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts",
-    "prod": "npm run build && npm run start",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
+    "test": "docker compose up -d && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "lint": "eslint src/**/*.ts",
-    "lint-fix": "eslint --fix src/**/*.ts",
-    "test-build": "docker compose up -d && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
+    "lint-fix": "eslint --fix src/**/*.ts"
   },
   "repository": {
     "type": "git",
